--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,10 +31,10 @@ dependencies = ["jupyter_ai"]
 test = ["coverage", "pytest", "pytest-asyncio", "pytest-cov"]
 
 [project.entry-points."jupyter_ai.model_providers"]
-test-provider = "jupyter_ai_blablador.provider:BlabladorProvider"
+blablador-provider = "jupyter_ai_blablador.provider:BlabladorProvider"
 
-[project.entry-points."jupyter_ai.chat_handlers"]
-test-slash-command = "jupyter_ai_blablador.slash_command:TestSlashCommand"
+# [project.entry-points."jupyter_ai.chat_handlers"]
+# blablador-slash-command = "jupyter_ai_blablador.slash_command:TestSlashCommand"
 
 [tool.hatch.build.hooks.version]
 path = "jupyter_ai_blablador/_version.py"
