--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["hatchling>=1.4.0", "jupyterlab~=4.0"]
+requires = ["hatchling>=1.4.0", "jupyterlab~=4.0", "hatch-nodejs-version"]
 build-backend = "hatchling.build"
 
 [project]
@@ -40,8 +40,46 @@ blablador-chat = "jupyter_ai_blablador.provider:ChatBlabladorProvider"
 [project.entry-points."jupyter_ai.embeddings_model_providers"]
 blablador = "jupyter_ai_blablador.provider:BlabladorEmbeddingsProvider"
 
+[tool.check-wheel-contents]
+ignore = ["W002"]
+
 [tool.hatch.build.hooks.version]
 path = "jupyter_ai_blablador/_version.py"
 
-[tool.check-wheel-contents]
-ignore = ["W002"]
+#[tool.hatch.version]
+#source = "nodejs"
+#
+#[tool.hatch.metadata.hooks.nodejs]
+#fields = ["description", "authors", "urls"]
+#
+#[tool.hatch.build.targets.sdist]
+#artifacts = ["jupyter_ai_blablador/labextension"]
+#exclude = [".github", "binder"]
+#
+#[tool.hatch.build.targets.wheel.shared-data]
+#"jupyter_ai_blablador/labextension" = "share/jupyter/labextensions/@jupyter-ai-blablador/core"
+#"install.json" = "share/jupyter/labextensions/@jupyter-ai-blablador/core/install.json"
+#"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"
+#"jupyter-config/nb-config" = "etc/jupyter/jupyter_notebook_config.d"
+#
+#[tool.hatch.build.hooks.version]
+#path = "jupyter_ai_blablador/_version.py"
+#
+#[tool.hatch.build.hooks.jupyter-builder]
+#dependencies = ["hatch-jupyter-builder>=0.5"]
+#build-function = "hatch_jupyter_builder.npm_builder"
+##ensured-targets = [
+##    "jupyter_ai_blablador/labextension/static/style.js",
+##    "jupyter_ai_blablador/labextension/package.json",
+##]
+##skip-if-exists = ["jupyter_ai_blablador/labextension/static/style.js"]
+#
+#[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
+#build_cmd = "build:prod"
+#npm = ["jlpm"]
+#
+#[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
+#build_cmd = "install:extension"
+#npm = ["jlpm"]
+#source_dir = "src"
+#build_dir = "jupyter_ai_blablador/labextension"
