--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
 ]
 version = "0.1.0"
-description = "A Jupyter AI extension."
+description = "A Jupyter AI extension for Blablador."
 authors = [
     { name = "Jens Henrik Goebbert", email = "j.goebbert@fz-juelich.de" },
 ]
@@ -45,41 +45,3 @@ ignore = ["W002"]
 
 [tool.hatch.build.hooks.version]
 path = "jupyter_ai_blablador/_version.py"
-
-#[tool.hatch.version]
-#source = "nodejs"
-#
-#[tool.hatch.metadata.hooks.nodejs]
-#fields = ["description", "authors", "urls"]
-#
-#[tool.hatch.build.targets.sdist]
-#artifacts = ["jupyter_ai_blablador/labextension"]
-#exclude = [".github", "binder"]
-#
-#[tool.hatch.build.targets.wheel.shared-data]
-#"jupyter_ai_blablador/labextension" = "share/jupyter/labextensions/@jupyter-ai-blablador/core"
-#"install.json" = "share/jupyter/labextensions/@jupyter-ai-blablador/core/install.json"
-#"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"
-#"jupyter-config/nb-config" = "etc/jupyter/jupyter_notebook_config.d"
-#
-#[tool.hatch.build.hooks.version]
-#path = "jupyter_ai_blablador/_version.py"
-#
-#[tool.hatch.build.hooks.jupyter-builder]
-#dependencies = ["hatch-jupyter-builder>=0.5"]
-#build-function = "hatch_jupyter_builder.npm_builder"
-##ensured-targets = [
-##    "jupyter_ai_blablador/labextension/static/style.js",
-##    "jupyter_ai_blablador/labextension/package.json",
-##]
-##skip-if-exists = ["jupyter_ai_blablador/labextension/static/style.js"]
-#
-#[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
-#build_cmd = "build:prod"
-#npm = ["jlpm"]
-#
-#[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
-#build_cmd = "install:extension"
-#npm = ["jlpm"]
-#source_dir = "src"
-#build_dir = "jupyter_ai_blablador/labextension"
